--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,12 @@
   --font-mono: var(--font-geist-mono);
 }
 
+@layer utilities {
+  .nav-link {
+    @apply text-zinc-500 hover:text-zinc-800 transition-colors
+  }
+}
+
 /* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
